Fixed "z-index" syntax error
The "z-index" error made the top bar go under the main body.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   height: 60px;
   top: -1px;
   left: -1px;
+  z-index: 100;
 }
 
 #header_title_style {
